--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -6,9 +6,9 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="question, loop : ${questionList}">
+    <tr th:each="question, index : ${questionList}">
         <td>
-            [[${loop.count}]] / [[${loop.size}]]
+            <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
         </td>
         <td>
             [[${question.subject}]]
