--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/css/bootstrap.min.css">
 
 <h1 th:text="|제목 : ${question.subject}|"></h1>
 <div th:text="|날짜 ${#temporals.format(question.createDate, 'yy.MM.dd HH:mm')}|"></div>
