--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -6,6 +6,10 @@
 <div layout:fragment="content" class="container">
   <h5 class="my-3 border-bottom pb-2">질문등록</h5>
 
+  <div class="alert alert-danger" role="alert" th:if="${errorMsg != null}" th:text="${errorMsg}">
+
+  </div>
+
   <form th:action="@{/question/create}" method="POST">
     <div class="mb-3">
       <label class="form-label">제목</label>
