--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -6,14 +6,15 @@
 <div layout:fragment="content" class="container">
   <h5 class="my-3 border-bottom pb-2">질문등록</h5>
 
-  <div class="alert alert-danger" role="alert" th:if="${errorMsg != null}" th:text="${errorMsg}">
+  <div class="alert alert-danger" role="alert" th:if="${subjectErrorMsg != null}" th:text="${subjectErrorMsg}"></div>
+  <div class="alert alert-danger" role="alert" th:if="${contentErrorMsg != null}" th:text="${contentErrorMsg}"></div>
 
-  </div>
 
   <form th:action="@{/question/create}" method="POST">
     <div class="mb-3">
       <label class="form-label">제목</label>
-      <input type="text" name="subject" class="form-control" placeholder="제목을 입력해주세요.">
+      <input th:value="${questionFrom?.subject}" type="text" name="subject" class="form-control" placeholder="제목을 입력해주세요.">
+    <!-- ?는 questionForm이 있으면 subject를 쓰고 아니면 안쓴다는  -->
     </div>
 
     <div class="mb-3">
