--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -5,7 +5,7 @@
 
 <div layout:fragment="content" class="container">
     <h5 class="my-3 border-bottom pb-2">질문등록</h5>
-    <form th:object="${questionForm}" method="post">
+    <form th:action="@{''}" th:object="${questionForm}" method="post">
 
     <form th:action="@{/question/create}" th:object="${questionForm}" method="post">
         <!--th:object를 사용하면서 ${questionForm.xx}를 쓸 때 *{xx}로 사용할 수 있다.
